# ArkadyJarvisMAX

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: bg_tasks.py  config.py  db.py  main.py  summarizer.py  utils.py
app/api/: routes.py
app/bot/: attachments.py  create.py  maxapi_compat.py  middlewares.py
app/bot/routers/: _attendee_picker.py  ask_ai.py  buffer.py  cicero.py  contract.py  employee.py  free_slots.py  glafira.py  group.py  image.py  jira_task.py  lead.py  meeting.py  recruiter.py  socrates.py  start.py  summarize.py  work.py
app/scheduler/: jobs.py
app/services/: ai_client.py  claude_token.py  document_parser.py  ffmpeg_tool.py  jira_client.py  meeting_downloader.py  meeting_pipeline.py  openclaw_client.py  openrouter_client.py  potok_client.py  potok_models.py  prompts.py  resume_scorer.py
app/services/bitrix_client/: __init__.py  _base.py  _calendar.py  _crm.py  _timeman.py  _users.py
prompts/: cicero.md  contract_check.md  jira_task_template.md  meeting_brief.md  meeting_review.md  monday_poster.md  voice_transcribe.md  wednesday_frog.md
scripts/: show_groups.py  show_users.py  test_monday_poster.py  test_wednesday_frog.py
